# whitelabel-wpp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  poc-report.txt  pyproject.toml
bridge/: go.mod  go.sum  main.go
infra/: template.yaml
src/whitelabel_wpp/: cognee_client.py  config.py  main.py  milvus_client.py  models.py  neo4j_client.py  processor.py  telnyx_client.py  webhook.py  whatsmeow_client.py
src/whitelabel_wpp/owner_chat/: handler.py  intent.py
